# cosmic-ext-app-switcher

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  cargo-sources.json  install.sh  io.github.cosmic-ext-applet-app-switcher.json  uninstall.sh
.claude/: CLAUDE.md
.github/workflows/: release.yml
applet/: Cargo.toml
applet/data/: io.github.cosmic-ext-applet-app-switcher.desktop  io.github.cosmic-ext-applet-app-switcher.metainfo.xml
applet/src/: app.rs  main.rs
config/: Cargo.toml
config/src/: lib.rs
docs/: plan.md
flatpak/: generate-cargo-sources.sh
scripts/: disable.sh  enable.sh  find-config.sh  status.sh
src/: app.rs  icons.rs  main.rs  ui.rs  wayland.rs
