[package]
name = "cosmic-app-switcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cosmic-app-switcher"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "wayland",
    "tokio",
    "winit",
    "multi-window",
] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "d0e95be" }
freedesktop-desktop-entry = "0.5"

wayland-client = "0.31"

tokio      = { version = "1", features = ["net", "io-util"] }
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
